Revision history for Perl extension Catalyst::Model::DBIC::Schema

0.19  XXX Not yet released
        - Fix for rt.cpan.org #22426

0.18  Tue Aug  8 04:34:42 UTC 2006
        - Version bump for public release, no functional change

0.17_01 Thu Jul 27 01:06:13 UTC 2006
        - Updated for DBIC 0.07

0.16  Thu Jul  6 13:28:45 UTC 2006
        - Bugfix for create=static and connect_info coderef snippets
	- Be more verbose when connection_info is not set.

0.15  Tue Jun  6 01:33:57 UTC 2006
        - Fixed a serious bug in create=static usage
        - Re-arranged output generation so that the more likely
          failure to generate Schemas via create= will cause the
          helper to abort before generating the Model class itself

0.14  Mon Jun  5 23:34:35 UTC 2006
        - Helpers merged, helper syntax changed
        - Everything updated for Schema::Loader 0.03001 support, including
          what amounts to using Loader in one-shot mode to generate
          a manual Schema with matching Model.
        - fixed stupid typo in docs

0.13  Wed Apr 26 2006
        - noted support via mailing lists

0.12  Tue Apr 25 2006
        - SYNOPSIS improved substantially to help newbies get started

0.11  Sun Mar 26 17:22:31 UTC 2006
        - Removed on_connect_do config setting (it was only out
          in public for 4 days...).
        - Support for on_connect_do and sql_maker options as part
          of connect_info

0.10  Wed Mar 22 07:06:02 UTC 2006
        - Added on_connect_do config setting
        - Added convenience method for ->schema->storage from paulm

0.08  Tue Feb 28 00:04:16 UTC 2006
        - Bumped D::C::Schema::Loader recommendation to 0.02003
          (should have been done last release)
        - Removed the ->require stuff added in 0.07, it doesn't
          do what it is supposed to do.  For now, users can layer
          at the Schema::Loader level rather than at Model.

0.07  Sun Feb 19 21:50:18 UTC 2006